SGD8-457: Fixed bug with text wrapping in contact-details

--- a/components/31-molecules/contact-details/_contact-details.scss
+++ b/components/31-molecules/contact-details/_contact-details.scss
@@ -2,13 +2,6 @@ $avatar-width: 14rem;
 
 .contact-details {
   .inner-box {
-    display: flex;
-    flex-wrap: wrap;
-
-    > h2 {
-      width: 100%;
-    }
-
     &::before {
       @include spot-image('book-light', 7rem);
     }
